# Seti

./: .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  pyproject.toml
.github/workflows/: accel-xmatch.yml  accel.yml  ci.yml  cluster.yml  dimming-characterize.yml  dimming-sweep.yml  dimming-vet.yml  dimming.yml  panspermia-dossier.yml  panspermia-mc.yml  panspermia-targets.yml  panspermia.yml  science-blend.yml  science.yml  spectra-confirm.yml  spectra.yml  xp.yml
config/: catalogs.yaml  paths.yaml  population.yaml  thresholds.yaml
data/sample/: wd_sample.parquet
paper/: main.tex  numbers.tex  refs.bib
paper/laser/: main.tex  numbers.tex  refs.bib
results/accel/: accel_candidates.csv  class3_shortlist.csv  dark_companion_candidates.csv  literature_crossmatch.csv  literature_crossmatch_summary.json  summary.json
results/cluster/: AGGREGATE.json  clustered_groups.csv  ir_excess_tail.csv  summary.json
results/dimming/: AGGREGATE_occurrence_limit.json  characterization.json  dimming_candidates.csv  dimming_scored.csv  dimming_simbad.csv  summary.json  top_dippers.json  top_fader_candidate.json  vetting.csv
scripts/: make_bergeron_asset.py
src/seti/: cli.py  (+11 more)
tests/: conftest.py  test_absorb.py  test_accel.py  test_acquire_run.py  test_blend.py  test_cluster.py  test_contamination.py  test_contamination_budget.py  test_dimming.py  test_forecast.py  test_galaxy_reject.py  test_indicators.py  test_panspermia.py  test_panspermia_uncertainty.py  test_pipeline.py  test_sed.py  test_spectra.py  test_triage.py  test_units.py  test_variability.py  test_xp.py
(+483 files in other folders)
